zokrates_cli/examples/compile_errors/out_of_bounds.zok
def main(field a, field b) -> field {
    field[10] arr = [0; 10];
    u32 index = [a, 1] != [b, 0] ? 1000 : 0;
    return arr[index];
}
